--- a/onthego-services/onthegoapp/pom.xml
+++ b/onthego-services/onthegoapp/pom.xml
@@ -16,6 +16,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<unirest.version>1.4.9</unirest.version>
+		<json.version>1.1.1</json.version>
 	</properties>
 
 	<dependencies>
@@ -59,6 +61,16 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.mashape.unirest</groupId>
+			<artifactId>unirest-java</artifactId>
+			<version>${unirest.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>${json.version}</version>
 		</dependency>
 	<dependency>
 	    <groupId>javax.validation</groupId>
