--- a/onthego-services/onthegoapp/src/main/resources/application.properties
+++ b/onthego-services/onthegoapp/src/main/resources/application.properties
@@ -11,3 +11,17 @@ spring.jpa.hibernate.ddl-auto = update
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+
+#########
+logging.level.org.springframework.security=DEBUG
+security.oauth2.resource.user-info-uri=http://localhost:8081/user
+
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+
+
+ribbon.eureka.enabled=true
+
+spring.zipkin.base-url=http://localhost:8080/
